# DEMAGIS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  driver_lapack.cpp  matgen.cpp  matgen_dist.cpp  matgen_mt.cpp
examples/: CMakeLists.txt  driver_lapack.cpp  driver_scalapack.cpp
include/: io.hpp  io_mpi.hpp  matGen_lapack.hpp  matGen_scalapack.hpp  myDist.hpp  scalapack_utils.hpp
wrappers/: CMakeLists.txt  blas_fortran.hpp  blas_templates.hpp  blas_templates.inc  types.hpp
